--- a/app/src/main/res/layout/activity_create_session.xml
+++ b/app/src/main/res/layout/activity_create_session.xml
@@ -4,229 +4,282 @@
     android:layout_height="match_parent"
     android:background="#BAE1FF">
 
-    <!-- Thanh màu xanh phía trên -->
-    <RelativeLayout
-        android:id="@+id/top_bar"
+    <!-- Header -->
+    <LinearLayout
+        android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-      >
+        android:layout_height="100dp"
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
         <ImageView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:src="@drawable/logo"
+            android:id="@+id/backinglogo"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
 
-            android:layout_centerInParent="true"
-            android:contentDescription="Logo" />
-
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/search"
-            android:layout_marginTop="5dp"
-            android:layout_alignParentEnd="true"
-            android:contentDescription="Logo" />
+            android:src="@drawable/arrow_back" />
 
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/arrow_back"
-            android:layout_marginTop="5dp"
-            android:layout_alignParentStart="true"
-            android:contentDescription="Logo" />
-    </RelativeLayout>
+            android:layout_weight="1"
+            android:src="@drawable/logo" />
 
-    <!-- Nội dung giữa màn hình -->
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="34dp"
+            android:src="@drawable/search" />
+    </LinearLayout>
+
+    <!-- Scroll View with 7 Chapters -->
     <ScrollView
-        android:id="@+id/scroll_area"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/top_bar"
-        android:layout_above="@id/bottom_bar"
-        android:padding="16dp">
+        android:layout_height="0dp"
+        android:layout_below="@id/header"
+        android:layout_above="@id/bottomBar"
+        android:id="@+id/chooseChapter"
+        android:layout_marginTop="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="30dp">
 
-<!--            nút số 1-->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="wrap_content"
+                android:id = "@+id/chapter1"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginTop="15dp"
                 android:orientation="horizontal"
-                android:background="@drawable/bg_button"
-                android:gravity="center_vertical"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:layout_margin="12dp"
-                android:clickable="true"
-                android:focusable="true">
+                android:padding="20dp"
+                android:background="@drawable/bg_button">
 
-                <!-- Chữ bên trái -->
+                <View
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="   Transmission Caculator"
-                    android:textSize="25sp"
-                    android:textStyle="bold"
-                    android:textColor="#000" />
+                    android:text="Chapter I"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
-
-
-            </LinearLayout>
-
-<!--            nút số 2-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:orientation="horizontal"
-                android:background="@drawable/bg_button"
-                android:gravity="center_vertical"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:layout_margin="12dp"
-                android:clickable="true"
-                android:focusable="true">
-
-                <!-- Chữ bên trái -->
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="   Pulley\nCaculator"
-                    android:textSize="25dp"
-                    android:textStyle="bold"
-                    android:textColor="#000" />
-
-                <!-- Icon bên phải -->
                 <ImageView
-                    android:layout_width="164dp"
-                    android:layout_height="109dp"
-                    android:src="@drawable/pulley_caculator" />
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/arrow_forward" />
             </LinearLayout>
-<!--nút số 3-->
+
+            <!-- Chapter II -->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:id = "@+id/chapter2"
+                android:layout_marginTop="15dp"
                 android:orientation="horizontal"
-                android:background="@drawable/bg_button"
-                android:gravity="center_vertical"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:layout_margin="12dp"
-                android:clickable="true"
-                android:focusable="true">
+                android:padding="20dp"
+                android:background="@drawable/bg_button">
 
-                <!-- Chữ bên trái -->
+                <View
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="  Spring\nCaculator"
-                    android:textStyle="bold"
-                    android:textSize="25sp"
-                    android:textColor="#000" />
+                    android:text="Chapter II"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
-                <!-- Icon bên phải -->
                 <ImageView
-                    android:layout_width="111dp"
-                    android:layout_height="154dp"
-                    android:src="@drawable/spring_caculator" />
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/arrow_forward" />
             </LinearLayout>
-<!--nút số 4-->
+
+            <!-- Chapter III -->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:id="@+id/chapter3"
+                android:layout_marginTop="15dp"
                 android:orientation="horizontal"
-                android:background="@drawable/bg_button"
-                android:gravity="center_vertical"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:layout_margin="12dp"
-                android:clickable="true"
-                android:focusable="true">
+                android:padding="20dp"
+                android:background="@drawable/bg_button">
 
-                <!-- Chữ bên trái -->
+                <View
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Belt Length\n Caculator"
-                    android:textStyle="bold"
-                    android:textSize="25sp"
-                    android:textColor="#000" />
+                    android:text="Chapter III"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
-                <!-- Icon bên phải -->
                 <ImageView
-                    android:layout_width="165dp"
-                    android:layout_height="110dp"
-                    android:src="@drawable/belt_length_caculator" />
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/arrow_forward" />
             </LinearLayout>
-<!--nút số 5-->
+
+            <!-- Chapter IV -->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:id="@+id/chapter4"
+                android:layout_marginTop="15dp"
                 android:orientation="horizontal"
-                android:background="@drawable/bg_button"
-                android:gravity="center_vertical"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
-                android:layout_margin="12dp"
-                android:clickable="true"
-                android:focusable="true">
+                android:padding="20dp"
+                android:background="@drawable/bg_button">
 
-                <!-- Chữ bên trái -->
+                <View
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="     Engine\nDisplacement\n   Caculator"
-                    android:textSize="25sp"
-                    android:textStyle="bold"
-                    android:textColor="#000" />
+                    android:text="Chapter IV"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
-                <!-- Icon bên phải -->
                 <ImageView
-                    android:layout_width="143dp"
-                    android:layout_height="54dp"
-                    android:src="@drawable/engine_displacement_caculator" />
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/arrow_forward" />
             </LinearLayout>
 
+            <!-- Chapter V -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:id="@+id/chapter5"
+                android:layout_marginRight="25dp"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal"
+                android:padding="20dp"
+                android:background="@drawable/bg_button">
 
+                <View
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
 
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Chapter V"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/arrow_forward" />
+            </LinearLayout>
+
+            <!-- Chapter VI -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginTop="15dp"
+                android:id="@+id/chapter6"
+                android:orientation="horizontal"
+                android:padding="20dp"
+                android:background="@drawable/bg_button">
+
+                <View
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Chapter VI"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/arrow_forward" />
+            </LinearLayout>
+
+            <!-- Chapter VII -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal"
+                android:id="@+id/chapter7"
+                android:padding="20dp"
+                android:background="@drawable/bg_button">
+
+                <View
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Chapter VII"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/arrow_forward" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
 
-    <!-- Thanh màu xanh phía dưới -->
-    <RelativeLayout
-        android:id="@+id/bottom_bar"
+<!--    bottombar-->
+    <LinearLayout
+        android:id="@+id/bottomBar"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        >
 
-        android:layout_alignParentBottom="true">
+      <ImageView
+          android:layout_height="50dp"
+          android:layout_width="50dp"
+          android:src ="@drawable/ic_home"/>
 
-        <ImageView
-            android:id="@+id/icon_home"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="24dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_home"
-            android:contentDescription="Home" />
+        <View android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
 
-        <ImageView
-            android:id="@+id/icon_user"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="24dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_user"
-            android:contentDescription="User" />
-    </RelativeLayout>
+        <ImageView android:layout_height="50dp"
+                   android:layout_width="50dp"
+                   android:src ="@drawable/ic_user"/>
+    </LinearLayout>
+
 </RelativeLayout>
