--- a/app/src/main/res/layout/user_frontpage.xml
+++ b/app/src/main/res/layout/user_frontpage.xml
@@ -1,137 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_color"
-    android:padding="16dp">
-
-
-    <!-- Top section with logo and search button on the same row -->
-
-    <ImageView
-        android:id="@+id/logo"
-        app:srcCompat="@drawable/logo"
-        android:layout_width="100dp"
+    android:background="#BAE1FF">
+<!--     header-->
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="100dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp" />
+        android:id="@+id/header"
+        android:orientation ="horizontal"
+        android:gravity="center_vertical"
+        >
+        <View android:layout_height="34dp"
+            android:layout_width="30dp"/>
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+
+            android:src = "@drawable/logo"
+            android:layout_weight="1"
+            />
+        <ImageView android:layout_height="34dp"
+            android:layout_width="30dp"
+            android:src ="@drawable/search"/>
+
+    </LinearLayout>
 
 
-    <!-- Create new session Card -->
-    <ImageView
-        android:id="@+id/search"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/search" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/header"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:orientation="vertical"
+        android:gravity ="center_horizontal"
+        >
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/create"
-        android:layout_width="0dp"
-        android:layout_height="150dp"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="4dp"
-        app:layout_constraintTop_toBottomOf="@id/logo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.9"
-        android:layout_marginTop="16dp">
+        <LinearLayout
+            android:layout_width="346dp"
+            android:layout_height="121dp"
+            android:id ="@+id/createBtn"
+            android:background="@drawable/bg_button"
+            android:orientation = "horizontal"
+            android:gravity ="center"
+
+            >
+
+            <TextView
+                android:layout_width = "wrap_content"
+                android:layout_height ="wrap_content"
+                android:text = "Create New Session"
+                android:textStyle ="bold"
+                android:textSize = "30dp"
+                />
+            <View
+                android:layout_width = "10dp"
+                android:layout_height = "0dp"
+                />
+            <ImageView
+                android:layout_height="25dp"
+                android:layout_width="25dp"
+
+                android:src ="@drawable/arrow_forward"
+                />
+
+        </LinearLayout>
+         <TextView
+             android:layout_width = "wrap_content"
+             android:layout_height ="wrap_content"
+             android:text = "OR"
+             android:layout_margin="20dp"
+             android:textStyle ="bold"
+             android:textSize = "30dp"
+             />
+<!--        khối load lại session cũ-->
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="16dp"
-            android:gravity="center_vertical">
+            android:layout_height="400dp"
+            android:layout_below="@id/header"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:orientation="vertical"
+            android:background ="@drawable/bg_button"
+            >
 
-            <TextView
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height = "wrap_content"
+                android:orientation ="vertical"
+                android:gravity ="center"
+                android:padding = "30dp"
+
+                >
+
+
+                <TextView android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text= "Load Old Session Here"
+                    android:textStyle ="bold"
+                    android:textSize ="25dp"
+                    android:gravity="center"
+                    />
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/stat_minus" />
+
+
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:layout_margin="1dp"
+                android:background="#000000" />
+
+            <LinearLayout
+
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="@font/montserrat_bold"
-                android:gravity="center"
-                android:text="Create new session"
-                android:textColor="#040303"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+                android:orientation ="vertical"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="93dp"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/grey_container"
+                    android:gravity ="center_vertical"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding = "10dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="5dp"
+                            android:text="BTL1"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize ="12sp"
+                            android:text="author: Vo Duy Hieu"
+
+                            />
+
+                        <View
+                            android:layout_width="0dp"
+                            android:layout_height="5dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Last Edited : 11/07/2024"
+                            android:textSize="10sp"
+
+                            />
+                    </LinearLayout>
+
+                    <View android:layout_width="0dp"
+                          android:layout_height="match_parent"
+                          android:layout_weight="1"/>
+
+                    <ImageView
+                        android:layout_height = "30dp"
+                        android:layout_width ="30dp"
+                        android:src = "@drawable/open_in_full"
+                        />
+
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+
 
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
 
-    <!-- User Information Card -->
-    <androidx.cardview.widget.CardView
-        android:id="@+id/userinfo"
-        android:layout_width="0dp"
-        android:layout_height="150dp"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="4dp"
-        app:layout_constraintTop_toBottomOf="@id/create"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.9"
-        android:layout_marginTop="16dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="16dp"
-            android:gravity="center_vertical">
+    </LinearLayout>
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="@font/montserrat_bold"
-                android:gravity="center"
-                android:text="User Information"
-                android:textColor="#050505"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-    <!-- Log Out Card -->
-    <androidx.cardview.widget.CardView
-        android:id="@+id/logout"
-        android:layout_width="0dp"
-        android:layout_height="150dp"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="4dp"
-        app:layout_constraintTop_toBottomOf="@id/userinfo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.9"
-        android:layout_marginTop="16dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="16dp">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="@font/montserrat_bold"
-                android:gravity="center"
-                android:text="Log Out"
-                android:textColor="#040303"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
