--- a/app/src/main/res/layout/user_frontpage.xml
+++ b/app/src/main/res/layout/user_frontpage.xml
@@ -3,29 +3,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#BAE1FF">
-<!--     header-->
+    <!--     header-->
     <LinearLayout
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:id="@+id/header"
-        android:orientation ="horizontal"
         android:gravity="center_vertical"
-        >
-        <View android:layout_height="34dp"
-            android:layout_width="30dp"/>
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="30dp"
+            android:layout_height="34dp" />
+
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
 
-            android:src = "@drawable/logo"
             android:layout_weight="1"
-            />
-        <ImageView android:layout_height="34dp"
+            android:src="@drawable/logo" />
+
+        <ImageView
             android:layout_width="30dp"
-            android:src ="@drawable/search"/>
+            android:layout_height="34dp"
+            android:src="@drawable/search" />
 
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,48 +35,46 @@
         android:layout_below="@id/header"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:orientation="vertical"
-        android:gravity ="center_horizontal"
-        >
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/createBtn"
             android:layout_width="346dp"
             android:layout_height="121dp"
-            android:id ="@+id/createBtn"
             android:background="@drawable/bg_button"
-            android:orientation = "horizontal"
-            android:gravity ="center"
+            android:gravity="center"
+            android:orientation="horizontal"
 
             >
 
             <TextView
-                android:layout_width = "wrap_content"
-                android:layout_height ="wrap_content"
-                android:text = "Create New Session"
-                android:textStyle ="bold"
-                android:textSize = "30dp"
-                />
-            <View
-                android:layout_width = "10dp"
-                android:layout_height = "0dp"
-                />
-            <ImageView
-                android:layout_height="25dp"
-                android:layout_width="25dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Create New Session"
+                android:textSize="30dp"
+                android:textStyle="bold" />
 
-                android:src ="@drawable/arrow_forward"
-                />
+            <View
+                android:layout_width="10dp"
+                android:layout_height="0dp" />
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+
+                android:src="@drawable/arrow_forward" />
 
         </LinearLayout>
-         <TextView
-             android:layout_width = "wrap_content"
-             android:layout_height ="wrap_content"
-             android:text = "OR"
-             android:layout_margin="20dp"
-             android:textStyle ="bold"
-             android:textSize = "30dp"
-             />
-<!--        khối load lại session cũ-->
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="OR"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+        <!--        khối load lại session cũ-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -82,34 +82,30 @@
             android:layout_below="@id/header"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:orientation="vertical"
-            android:background ="@drawable/bg_button"
-            >
+            android:background="@drawable/bg_button"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height = "wrap_content"
-                android:orientation ="vertical"
-                android:gravity ="center"
-                android:padding = "30dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="30dp"
 
                 >
 
-
-                <TextView android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text= "Load Old Session Here"
-                    android:textStyle ="bold"
-                    android:textSize ="25dp"
                     android:gravity="center"
-                    />
+                    android:text="Load Old Session Here"
+                    android:textSize="25dp"
+                    android:textStyle="bold" />
 
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/stat_minus" />
-
-
 
             </LinearLayout>
 
@@ -123,22 +119,21 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation ="vertical"
-                >
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="93dp"
                     android:layout_margin="10dp"
                     android:background="@drawable/grey_container"
-                    android:gravity ="center_vertical"
+                    android:gravity="center_vertical"
                     android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding = "10dp"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:padding="10dp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -150,8 +145,8 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize ="12sp"
                             android:text="author: Vo Duy Hieu"
+                            android:textSize="12sp"
 
                             />
 
@@ -168,26 +163,21 @@
                             />
                     </LinearLayout>
 
-                    <View android:layout_width="0dp"
-                          android:layout_height="match_parent"
-                          android:layout_weight="1"/>
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1" />
 
                     <ImageView
-                        android:layout_height = "30dp"
-                        android:layout_width ="30dp"
-                        android:src = "@drawable/open_in_full"
-                        />
-
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/open_in_full" />
 
                 </LinearLayout>
 
             </LinearLayout>
 
-
-
-
         </LinearLayout>
-
 
     </LinearLayout>
 
