--- a/app/src/main/res/layout/activity_chapter1result.xml
+++ b/app/src/main/res/layout/activity_chapter1result.xml
@@ -9,8 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/backing"
@@ -19,11 +19,11 @@
             android:src="@drawable/arrow_back" />
 
         <TextView
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="Chapter I"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
+            android:text="Chapter I"
             android:textSize="25sp"
             android:textStyle="bold" />
 
@@ -33,21 +33,19 @@
             android:src="@drawable/search" />
     </LinearLayout>
 
-<!--    Box hiển thị kết quả-->
-
+    <!--    Box hiển thị kết quả-->
 
     <LinearLayout
+        android:id="@+id/caculateBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/header"
-        android:id = "@+id/caculateBox"
         android:layout_marginLeft="15dp"
-        android:layout_marginRight = "15dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="15dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/bg_button"
         android:orientation="vertical">
-
 
         <!-- Chain Force -->
         <TextView
@@ -63,8 +61,8 @@
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="6dp"
+            android:layout_marginRight="10dp"
             android:layout_marginBottom="6dp"
             android:background="@drawable/grey_container"
             android:orientation="horizontal">
@@ -72,8 +70,8 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginLeft="5dp"
+                android:layout_weight="1"
                 android:textColor="#449D00"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -86,8 +84,7 @@
                 android:textStyle="bold" />
         </LinearLayout>
 
-
-<!--        Esseintial Motor Power-->
+        <!--        Esseintial Motor Power-->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -101,8 +98,8 @@
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="6dp"
+            android:layout_marginRight="10dp"
             android:layout_marginBottom="6dp"
             android:background="@drawable/grey_container"
             android:orientation="horizontal">
@@ -110,8 +107,8 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginLeft="5dp"
+                android:layout_weight="1"
                 android:textColor="#449D00"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -124,7 +121,7 @@
                 android:textStyle="bold" />
         </LinearLayout>
 
-<!--        Torque-->
+        <!--        Torque-->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -138,8 +135,8 @@
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="6dp"
+            android:layout_marginRight="10dp"
             android:layout_marginBottom="6dp"
             android:background="@drawable/grey_container"
             android:orientation="horizontal">
@@ -147,8 +144,8 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginLeft="5dp"
+                android:layout_weight="1"
                 android:textColor="#449D00"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -162,85 +159,75 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width = "match_parent"
+            android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:orientation = "horizontal"
-            android:gravity = "center_vertical"
-            >
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="124dp"
-                android:layout_height ="38dp"
-                android:background = "@drawable/grey_bg_button"
+                android:layout_height="38dp"
                 android:layout_marginLeft="20dp"
-                >
+                android:background="@drawable/grey_bg_button">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text = "Show Equation"
-                    android:gravity = "center"
-                    android:textStyle = "bold"
-                    />
+                    android:gravity="center"
+                    android:text="Show Equation"
+                    android:textStyle="bold" />
             </LinearLayout>
 
-            <View android:layout_height="0dp"
-                  android:layout_width="0dp"
-                   android:layout_weight="1"
-                />
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
 
             <LinearLayout
                 android:layout_width="100dp"
-                android:layout_height ="38dp"
-                android:background = "@drawable/grey_bg_button"
+                android:layout_height="38dp"
                 android:layout_marginRight="20dp"
-                >
+                android:background="@drawable/grey_bg_button">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text = "Recaculate"
-                    android:gravity = "center"
-                    android:textStyle = "bold"
-                    />
+                    android:gravity="center"
+                    android:text="Recaculate"
+                    android:textStyle="bold" />
             </LinearLayout>
 
-
-
-
-            </LinearLayout>
-
+        </LinearLayout>
 
     </LinearLayout>
 
-
-
-    <LinearLayout android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_below = "@id/caculateBox"
-        android:gravity ="center"
+        android:layout_below="@id/caculateBox"
+        android:gravity="center"
 
         >
 
         <LinearLayout
+            android:layout_width="265dp"
             android:layout_height="45dp"
-            android:layout_width ="265dp"
 
-            android:background = "@drawable/button_black_rounded"
-            android:gravity = "center"
-
-
+            android:background="@drawable/button_black_rounded"
+            android:gravity="center"
 
             >
+
             <TextView
-                android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text = "Save and Proceed"
-                android:textStyle = "bold"
-                android:textColor ="#FFFFFF"
-                android:textSize = "20sp"
+                android:layout_height="wrap_content"
+                android:text="Save and Proceed"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                android:textStyle="bold"
 
                 />
         </LinearLayout>
     </LinearLayout>
-
 
 </RelativeLayout>
