--- a/app/src/main/res/layout/activity_create_session.xml
+++ b/app/src/main/res/layout/activity_create_session.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginTop="30dp"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/backinglogo"
@@ -34,11 +34,11 @@
 
     <!-- Scroll View with 7 Chapters -->
     <ScrollView
+        android:id="@+id/chooseChapter"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_below="@id/header"
         android:layout_above="@id/bottomBar"
-        android:id="@+id/chooseChapter"
+        android:layout_below="@id/header"
         android:layout_marginTop="10dp">
 
         <LinearLayout
@@ -48,15 +48,15 @@
             android:paddingBottom="30dp">
 
             <LinearLayout
+                android:id="@+id/chapter1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id = "@+id/chapter1"
                 android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginRight="25dp"
+                android:background="@drawable/bg_button"
                 android:orientation="horizontal"
-                android:padding="20dp"
-                android:background="@drawable/bg_button">
+                android:padding="20dp">
 
                 <View
                     android:layout_width="30dp"
@@ -78,15 +78,15 @@
 
             <!-- Chapter II -->
             <LinearLayout
+                android:id="@+id/chapter2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
-                android:id = "@+id/chapter2"
                 android:layout_marginTop="15dp"
+                android:layout_marginRight="25dp"
+                android:background="@drawable/bg_button"
                 android:orientation="horizontal"
-                android:padding="20dp"
-                android:background="@drawable/bg_button">
+                android:padding="20dp">
 
                 <View
                     android:layout_width="30dp"
@@ -108,15 +108,15 @@
 
             <!-- Chapter III -->
             <LinearLayout
+                android:id="@+id/chapter3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
-                android:id="@+id/chapter3"
                 android:layout_marginTop="15dp"
+                android:layout_marginRight="25dp"
+                android:background="@drawable/bg_button"
                 android:orientation="horizontal"
-                android:padding="20dp"
-                android:background="@drawable/bg_button">
+                android:padding="20dp">
 
                 <View
                     android:layout_width="30dp"
@@ -138,15 +138,15 @@
 
             <!-- Chapter IV -->
             <LinearLayout
+                android:id="@+id/chapter4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
-                android:id="@+id/chapter4"
                 android:layout_marginTop="15dp"
+                android:layout_marginRight="25dp"
+                android:background="@drawable/bg_button"
                 android:orientation="horizontal"
-                android:padding="20dp"
-                android:background="@drawable/bg_button">
+                android:padding="20dp">
 
                 <View
                     android:layout_width="30dp"
@@ -168,15 +168,15 @@
 
             <!-- Chapter V -->
             <LinearLayout
+                android:id="@+id/chapter5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
-                android:id="@+id/chapter5"
-                android:layout_marginRight="25dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginRight="25dp"
+                android:background="@drawable/bg_button"
                 android:orientation="horizontal"
-                android:padding="20dp"
-                android:background="@drawable/bg_button">
+                android:padding="20dp">
 
                 <View
                     android:layout_width="30dp"
@@ -198,15 +198,15 @@
 
             <!-- Chapter VI -->
             <LinearLayout
+                android:id="@+id/chapter6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
                 android:layout_marginTop="15dp"
-                android:id="@+id/chapter6"
+                android:layout_marginRight="25dp"
+                android:background="@drawable/bg_button"
                 android:orientation="horizontal"
-                android:padding="20dp"
-                android:background="@drawable/bg_button">
+                android:padding="20dp">
 
                 <View
                     android:layout_width="30dp"
@@ -228,15 +228,15 @@
 
             <!-- Chapter VII -->
             <LinearLayout
+                android:id="@+id/chapter7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginRight="25dp"
+                android:background="@drawable/bg_button"
                 android:orientation="horizontal"
-                android:id="@+id/chapter7"
-                android:padding="20dp"
-                android:background="@drawable/bg_button">
+                android:padding="20dp">
 
                 <View
                     android:layout_width="30dp"
@@ -259,27 +259,28 @@
         </LinearLayout>
     </ScrollView>
 
-<!--    bottombar-->
+    <!--    bottombar-->
     <LinearLayout
         android:id="@+id/bottomBar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
-      <ImageView
-          android:layout_height="50dp"
-          android:layout_width="50dp"
-          android:src ="@drawable/ic_home"/>
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_home" />
 
-        <View android:layout_width="0dp"
+        <View
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
-        <ImageView android:layout_height="50dp"
-                   android:layout_width="50dp"
-                   android:src ="@drawable/ic_user"/>
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_user" />
     </LinearLayout>
 
 </RelativeLayout>
