--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/please_sign_in_to_proceed"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:layout_marginTop="32dp"/>
 
@@ -82,8 +82,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Don't have account yet?"
-            android:textColor="@android:color/black"
+            android:text="@string/dont_have_account_yet"
+            android:textColor="@android:color/white"
             android:textSize="14sp"
             android:textStyle="italic" />
 
