--- a/app/src/main/res/layout/activity_chapter6result.xml
+++ b/app/src/main/res/layout/activity_chapter6result.xml
@@ -44,7 +44,7 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/caculateBox"
+                android:id="@+id/calculateBox"
                 android:layout_width="match_parent"
 
                 android:layout_height="wrap_content"
@@ -238,15 +238,6 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:layout_weight="1"
-                            android:textColor="#449D00"
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
-
-                        <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="mm"
@@ -289,6 +280,15 @@
                             android:textSize="18sp"
                             android:textStyle="bold" />
                     </LinearLayout>
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_weight="1"
+                        android:textColor="#449D00"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -666,7 +666,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="center"
-                            android:text="Recaculate"
+                            android:text="Recalculate"
                             android:textStyle="bold" />
                     </LinearLayout>
 
@@ -676,15 +676,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:layout_below="@id/caculateBox"
+                android:layout_below="@id/calculateBox"
                 android:gravity="center"
 
                 >
 
                 <LinearLayout
-                    android:layout_width="265dp"
-                    android:layout_height="45dp"
-
+                    android:id="@+id/save_data"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/button_black_rounded"
                     android:gravity="center"
 
