Upd logo + new reg page

--- a/app/src/main/res/layout/register_page.xml
+++ b/app/src/main/res/layout/register_page.xml
@@ -1,18 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_color"
-    tools:context=".MainActivity">
+    android:background="@color/main_color">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:padding="24dp">
+        android:padding="24dp"
+        android:gravity="center_horizontal">
 
         <!-- Title -->
         <ImageView
@@ -32,64 +28,74 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginTop="24dp"
-            android:contentDescription="@string/logo"
-            android:src="@drawable/logo" />
+            android:src="@drawable/logo"
+            android:contentDescription="@string/logo"/>
 
         <!-- Subtext -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:text="@string/please_sign_in_to_proceed"
+            android:text="@string/please_sign_up_to_create_account"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginTop="100dp"/>
 
         <!-- Username -->
         <EditText
             android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:hint="@string/hint1"
             android:layout_marginTop="25dp"
             android:background="@drawable/edittext_rounded"
-            android:hint="@string/hint1"
-            android:paddingHorizontal="16dp" />
+            android:paddingHorizontal="16dp"/>
 
         <!-- Password -->
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:hint="@string/hint2"
+            android:inputType="textPassword"
             android:layout_marginTop="25dp"
             android:background="@drawable/edittext_rounded"
-            android:hint="@string/hint2"
+            android:paddingHorizontal="16dp"/>
+
+        <!-- Password -->
+
+        <!-- Sign In Button -->
+        <EditText
+            android:id="@+id/re_password"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="25dp"
+            android:background="@drawable/edittext_rounded"
+            android:hint="@string/hint3"
             android:inputType="textPassword"
             android:paddingHorizontal="16dp" />
 
-        <!-- Sign In Button -->
         <Button
-            android:id="@+id/btn_signin"
+            android:id="@+id/btn_signup"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="35dp"
             android:background="@drawable/button_black_rounded"
-            android:text="Sign in"
+            android:text="Sign up"
+            android:textStyle="bold"
             android:textColor="@android:color/white"
-            android:textColorLink="#000000"
-            android:textStyle="bold" />
+            android:textColorLink="#000000" />
 
         <!-- Sign Up Link -->
         <TextView
-            android:id="@+id/signup_link"
+            android:id="@+id/signin_link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:text="@string/dont_have_account_yet"
+            android:text="@string/already_have_account"
             android:textColor="@android:color/white"
             android:textSize="16sp"
             android:textStyle="italic" />
 
     </LinearLayout>
-</ScrollView>
+</RelativeLayout>
