--- a/app/src/main/res/layout/activity_chapter1.xml
+++ b/app/src/main/res/layout/activity_chapter1.xml
@@ -1,23 +1,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#BAE1FF">
+    android:background="@color/white">
 
     <!-- Header -->
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="40dp"
+        android:layout_height="96dp"
+        android:background="@color/main_color"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
+        <View
+            android:layout_width="10dp"
+            android:layout_height="match_parent" />
+
         <ImageView
             android:id="@+id/backing"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/arrow_back" />
 
         <TextView
@@ -26,8 +28,18 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="Chapter I"
+            android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="34dp"
+            android:src="@drawable/search" />
+
+        <View
+            android:layout_width="10dp"
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
@@ -228,7 +240,6 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="6dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
             android:background="@drawable/grey_container"
             android:orientation="horizontal">
 
@@ -280,21 +291,82 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="15dp"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="124dp"
+                android:layout_height="38dp"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/grey_bg_button">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="Show Equation"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="90dp"
+                android:layout_height="38dp"
+                android:layout_marginLeft="50dp"
+                android:background="@drawable/grey_bg_button"
+
+                >
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="Import"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="80dp"
+                android:layout_height="38dp"
+                android:layout_marginLeft="50dp"
+                android:background="@drawable/grey_bg_button">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="Reset"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+        </LinearLayout>
     </LinearLayout>
 
     <!-- Buttons (kept unchanged as per your request) -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="100dp"
         android:layout_below="@id/calculateBox"
-        android:gravity="center">
+        android:gravity="center"
+
+        >
 
         <LinearLayout
             android:id="@+id/calculate"
             android:layout_width="245dp"
             android:layout_height="45dp"
             android:background="@drawable/button_black_rounded"
-            android:gravity="center">
+            android:gravity="center"
+
+            >
 
             <TextView
                 android:layout_width="wrap_content"
@@ -302,9 +374,9 @@
                 android:text="Calculate"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
-                android:textStyle="bold" />
-        </LinearLayout>
+                android:textStyle="bold"
 
-        <!-- Keep other buttons as is -->
+                />
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
