--- a/app/src/main/res/layout/activity_chapter2result.xml
+++ b/app/src/main/res/layout/activity_chapter2result.xml
@@ -1,23 +1,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#BAE1FF">
+    android:background="@color/white">
 
     <!-- Header -->
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="40dp"
+        android:layout_height="96dp"
+        android:background="@color/main_color"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
+        <View
+            android:layout_width="10dp"
+            android:layout_height="match_parent" />
+
         <ImageView
             android:id="@+id/backing"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/arrow_back" />
 
         <TextView
@@ -25,9 +27,20 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Chương II"
+            android:text="Chapter II"
+            android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="34dp"
+            android:src="@drawable/search" />
+
+        <View
+            android:layout_width="10dp"
+            android:layout_height="match_parent" />
+
     </LinearLayout>
 
     <!-- Result Box -->
@@ -186,17 +199,17 @@
                 android:id="@+id/resultZ1"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
                 android:layout_marginStart="20dp"
+                android:gravity="center"
                 android:textColor="#449D00"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
             <TextView
-                android:text=" - "
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
+                android:text=" - "
                 android:textSize="18sp" />
 
             <TextView
@@ -245,7 +258,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
