--- a/app/src/main/res/layout/activity_chapter3.xml
+++ b/app/src/main/res/layout/activity_chapter3.xml
@@ -1,21 +1,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#BAE1FF">
+    android:background="@color/white">
 
     <!-- Header -->
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="20dp"
+        android:layout_height="96dp"
+        android:background="@color/main_color"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
+        <View
+            android:layout_width="10dp"
+            android:layout_height="match_parent" />
+
         <ImageView
             android:id="@+id/backing"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/arrow_back" />
 
         <TextView
@@ -24,13 +28,19 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="Chapter III"
+            android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold" />
 
         <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="30dp"
+            android:layout_height="34dp"
             android:src="@drawable/search" />
+
+        <View
+            android:layout_width="10dp"
+            android:layout_height="match_parent" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -153,7 +163,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="40dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="15dp"
@@ -162,7 +172,7 @@
             <LinearLayout
                 android:layout_width="124dp"
                 android:layout_height="38dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="10dp"
                 android:background="@drawable/grey_bg_button">
 
                 <TextView
@@ -177,8 +187,7 @@
             <LinearLayout
                 android:layout_width="90dp"
                 android:layout_height="38dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginLeft="50dp"
                 android:background="@drawable/grey_bg_button"
 
                 >
@@ -195,7 +204,7 @@
             <LinearLayout
                 android:layout_width="80dp"
                 android:layout_height="38dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="50dp"
                 android:background="@drawable/grey_bg_button">
 
                 <TextView
