--- a/app/src/main/res/layout/activity_chapter6result.xml
+++ b/app/src/main/res/layout/activity_chapter6result.xml
@@ -1,21 +1,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#BAE1FF">
+    android:background="@color/white">
 
     <!-- Header -->
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="20dp"
+        android:layout_height="96dp"
+        android:background="@color/main_color"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
+        <View
+            android:layout_width="10dp"
+            android:layout_height="match_parent" />
+
         <ImageView
             android:id="@+id/backing"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/arrow_back" />
 
         <TextView
@@ -24,13 +28,19 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="Chapter VI"
+            android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold" />
 
         <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="30dp"
+            android:layout_height="34dp"
             android:src="@drawable/search" />
+
+        <View
+            android:layout_width="10dp"
+            android:layout_height="match_parent" />
+
     </LinearLayout>
 
     <ScrollView
@@ -633,7 +643,9 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="15dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
 
@@ -682,23 +694,32 @@
                 >
 
                 <LinearLayout
-                    android:id="@+id/save_data"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/button_black_rounded"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_below="@id/calculateBox"
                     android:gravity="center"
 
                     >
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Save and Proceed"
-                        android:textColor="#FFFFFF"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
+                    <LinearLayout
+                        android:id="@+id/save_data"
+                        android:layout_width="265dp"
+                        android:layout_height="45dp"
+                        android:background="@drawable/button_black_rounded"
+                        android:gravity="center"
 
-                        />
+                        >
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Save and Proceed"
+                            android:textColor="#FFFFFF"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+
+                            />
+                    </LinearLayout>
                 </LinearLayout>
 
             </LinearLayout>
