--- a/app/src/main/res/layout/activity_chapter7.xml
+++ b/app/src/main/res/layout/activity_chapter7.xml
@@ -2,21 +2,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#BAE1FF">
+    android:background="@color/white">
 
     <!-- Header -->
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="20dp"
+        android:layout_height="96dp"
+        android:background="@color/main_color"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
+        <View
+            android:layout_width="10dp"
+            android:layout_height="match_parent" />
+
         <ImageView
             android:id="@+id/backing"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/arrow_back" />
 
         <TextView
@@ -25,13 +29,19 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="Chapter VII"
+            android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold" />
 
         <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="30dp"
+            android:layout_height="34dp"
             android:src="@drawable/search" />
+
+        <View
+            android:layout_width="10dp"
+            android:layout_height="match_parent" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -180,9 +190,11 @@
                 android:textStyle="bold" />
         </LinearLayout>
 
+        <!-- Load Factor -->
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="40dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="15dp"
@@ -191,7 +203,7 @@
             <LinearLayout
                 android:layout_width="124dp"
                 android:layout_height="38dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="10dp"
                 android:background="@drawable/grey_bg_button">
 
                 <TextView
@@ -206,8 +218,7 @@
             <LinearLayout
                 android:layout_width="90dp"
                 android:layout_height="38dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginLeft="50dp"
                 android:background="@drawable/grey_bg_button"
 
                 >
@@ -224,7 +235,7 @@
             <LinearLayout
                 android:layout_width="80dp"
                 android:layout_height="38dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="50dp"
                 android:background="@drawable/grey_bg_button">
 
                 <TextView
