--- a/app/src/main/res/layout/user_frontpage.xml
+++ b/app/src/main/res/layout/user_frontpage.xml
@@ -7,10 +7,14 @@
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="96dp"
+        android:background="@color/main_color"
         android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:background="@color/main_color">
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="10dp"
+            android:layout_height="match_parent" />
 
         <View
             android:layout_width="30dp"
@@ -28,6 +32,10 @@
             android:layout_height="34dp"
             android:src="@drawable/search" />
 
+        <View
+            android:layout_width="10dp"
+            android:layout_height="match_parent" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -35,8 +43,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/header"
         android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
         android:layout_marginTop="50dp"
+        android:layout_marginRight="30dp"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
@@ -64,7 +72,6 @@
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-
                 android:src="@drawable/arrow_forward" />
 
         </LinearLayout>
@@ -79,8 +86,8 @@
         <!--        khối load lại session cũ-->
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_width="346dp"
+            android:layout_height="447dp"
             android:layout_below="@id/header"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
@@ -92,7 +99,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:padding="30dp"
+                android:padding="20dp"
 
                 >
 
@@ -101,12 +108,13 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="Load Old Session Here"
-                    android:textSize="25dp"
+                    android:textSize="30dp"
                     android:textStyle="bold" />
 
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
+                    android:layout_marginTop="10dp"
                     android:src="@drawable/stat_minus" />
 
             </LinearLayout>
@@ -198,9 +206,9 @@
             android:layout_weight="1" />
 
         <ImageView
-            android:layout_marginTop="15dp"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_marginTop="15dp"
             android:src="@drawable/ic_home" />
 
         <View
@@ -209,10 +217,11 @@
             android:layout_weight="3" />
 
         <ImageView
-            android:layout_marginTop="15dp"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_marginTop="15dp"
             android:src="@drawable/ic_user" />
+
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
