--- a/app/src/main/res/layout/activity_chapter6.xml
+++ b/app/src/main/res/layout/activity_chapter6.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
@@ -314,62 +315,24 @@
 
                 <!-- Load Factor -->
 
-                <LinearLayout
+                <!-- const button set-->
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_horizontal"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="20dp"
-                    android:layout_marginBottom="15dp"
-                    android:orientation="horizontal">
+                    android:layout_marginBottom="15dp">
 
-                    <LinearLayout
-                        android:layout_width="124dp"
-                        android:layout_height="38dp"
-                        android:layout_marginLeft="10dp"
-                        android:background="@drawable/grey_bg_button">
+                    <include
+                        android:id="@+id/chap6_button_set"
+                        layout="@layout/const_button_set"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:text="Show Equation"
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="90dp"
-                        android:layout_height="38dp"
-                        android:layout_marginLeft="50dp"
-                        android:background="@drawable/grey_bg_button"
-
-                        >
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:text="Import"
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="80dp"
-                        android:layout_height="38dp"
-                        android:layout_marginLeft="50dp"
-                        android:background="@drawable/grey_bg_button">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:text="Reset"
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+                <!-- const button set-->
             </LinearLayout>
 
             <LinearLayout
