--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,16 +66,27 @@
             android:paddingHorizontal="16dp" />
 
         <!-- Sign In Button -->
-        <Button
-            android:id="@+id/btn_signin"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
+        <LinearLayout
+            android:id="@+id/sign_in"
+            android:layout_width="265dp"
+            android:layout_height="45dp"
             android:layout_marginTop="35dp"
             android:background="@drawable/button_black_rounded"
-            android:text="Sign in"
-            android:textColor="@android:color/white"
-            android:textColorLink="#000000"
-            android:textStyle="bold" />
+            android:gravity="center"
+
+            >
+
+            <TextView
+                android:id="@+id/sign_in_word"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sign In"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                android:textStyle="bold"
+
+                />
+        </LinearLayout>
 
         <!-- Sign Up Link -->
         <TextView
