--- a/app/src/main/res/layout/activity_chapter6.xml
+++ b/app/src/main/res/layout/activity_chapter6.xml
@@ -13,34 +13,26 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <View
-            android:layout_width="10dp"
-            android:layout_height="match_parent" />
-
         <ImageView
-            android:id="@+id/backing"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:id="@id/backing"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
             android:src="@drawable/arrow_back" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/header_title"
+            android:paddingStart="0dp"
+            android:paddingEnd="40dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
             android:text="Chapter VI"
             android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold" />
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="34dp"
-            android:src="@drawable/search" />
-
-        <View
-            android:layout_width="10dp"
-            android:layout_height="match_parent" />
 
     </LinearLayout>
 
