--- a/app/src/main/res/layout/user_frontpage.xml
+++ b/app/src/main/res/layout/user_frontpage.xml
@@ -199,32 +199,23 @@
         android:background="@color/main_color"
         android:orientation="horizontal">
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="25dp"
+            android:id="@+id/create_session_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="Home"
+            android:padding="15dp"
+            android:layout_weight="1"
             android:src="@drawable/ic_home" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="3" />
-
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="15dp"
+            android:id="@+id/user_profile_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="User"
+            android:padding="10dp"
+            android:layout_weight="1"
             android:src="@drawable/ic_user" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
 
     </LinearLayout>
 
