--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -13,35 +13,26 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <View
-            android:layout_width="10dp"
-            android:layout_height="match_parent" />
-
         <ImageView
-            android:id="@+id/backing"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:id="@id/backing"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
             android:src="@drawable/arrow_back" />
 
         <TextView
             android:id="@+id/header_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:paddingStart="0dp"
+            android:paddingEnd="40dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
             android:text="User Information"
             android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold" />
-
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="34dp"
-            android:src="@drawable/search" />
-
-        <View
-            android:layout_width="10dp"
-            android:layout_height="match_parent" />
 
     </LinearLayout>
 
@@ -58,8 +49,8 @@
 
         <!-- Profile Image (Placeholder) -->
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_marginEnd="16dp"
             android:src="@android:drawable/ic_menu_gallery" />
 
@@ -76,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:text="Nguyen Thi A"
                 android:textColor="#000000"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -85,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:text="ntta@gmail.com"
                 android:textColor="#666666"
-                android:textSize="14sp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/dob"
@@ -93,14 +84,29 @@
                 android:layout_height="wrap_content"
                 android:text="DOB: 20/1/2001"
                 android:textColor="#666666"
-                android:textSize="14sp" />
+                android:textSize="20sp" />
 
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Student"
-                android:textColor="#666666"
-                android:textSize="14sp" />
+                android:gravity="bottom"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="20dp"
+                    android:src="@android:drawable/ic_menu_gallery" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_button"
+                    android:padding="5dp"
+                    android:text="Student"
+                    android:textColor="#666666"
+                    android:textSize="24sp" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
@@ -127,8 +133,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="02"
-                android:textColor="#000000"
-                android:textSize="24sp"
+                android:textColor="@color/main_color"
+                android:textSize="35dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -136,7 +142,7 @@
                 android:layout_height="wrap_content"
                 android:text="Sessions created"
                 android:textColor="#666666"
-                android:textSize="14sp" />
+                android:textSize="16sp" />
         </LinearLayout>
 
         <!-- Average Rating Score -->
@@ -151,8 +157,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="7.5"
-                android:textColor="#000000"
-                android:textSize="24sp"
+                android:textColor="@color/main_color"
+                android:textSize="35dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -160,7 +166,7 @@
                 android:layout_height="wrap_content"
                 android:text="Average rating score"
                 android:textColor="#666666"
-                android:textSize="14sp" />
+                android:textSize="16sp" />
         </LinearLayout>
     </LinearLayout>
 
@@ -277,32 +283,23 @@
         android:background="@color/main_color"
         android:orientation="horizontal">
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="25dp"
+            android:id="@id/create_session_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="Home"
+            android:padding="15dp"
+            android:layout_weight="1"
             android:src="@drawable/ic_home" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="3" />
-
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="15dp"
+            android:id="@id/user_profile_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="User"
+            android:padding="10dp"
+            android:layout_weight="1"
             android:src="@drawable/ic_user" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
     </LinearLayout>
-
 </RelativeLayout>
